--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         div{
             width: 200px;
             height: 200px;
-            background-color: lightblue;
+            background-color:#0CA0F5;
             margin: 10px;
-            display: inline-flex;
+            display: flex;
             justify-content: center;
             align-items: center;
             
@@ -20,7 +20,7 @@
              margin: 0;
         }
         *{
-            background-color: azure;
+            background-color:white;
         }
     
     </style>
@@ -28,36 +28,32 @@
 <body>
     <a href="2lk.html">
     <div>
-        <h1>2,00000</h1>
+        <h1>2,00,0000
+            <pre>10/8/2024</pre>
+        </h1>
     </div>
     </a>
     <a href="2lk2.html">
     <div>
-        <h1>2,000000</h1>
+        <h1>2,00,0000
+            <pre>10/8/2025</pre>
+        </h1>
     </div>
     </a>
+    <a href="2lk3.html">
     <div>
-        <h1>1</h1>
+        <h1>2,00,000
+            <pre>25/1/2025</pre>
+        </h1>
     </div>
+    </a>
     <br>
+    <a href="50k.html">
     <div>
-       <h1>1</h1>
+       <h1>50,000
+        <pre>1/7/25</pre>
+       </h1>
     </div>
-    <div>
-        <h1>1</h1>
-    </div>
-    <div>
-        <h1>1</h1>
-    </div>
-    <br>
-    <div>
-        <h1>1</h1>
-    </div>
-    <div>
-        <h1>1</h1>
-    </div>
-    <div>
-        <h1>1</h1>
-    </div>
+    </a>
 </body>
 </html>
