--- a/2lk2.html
+++ b/2lk2.html
@@ -4,24 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        div{
+            background-color: blue;
+            text-align: center;
+            
+        }
+    </style>
 </head>
 <body>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
-    <a href="tel:+919876543210"><h1>person</h1></a>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+   <div> <a href="tel:+91"><h1></h1></a></div>
+    
+
 
 </body>
 </html>
