--- a/2lk.html
+++ b/2lk.html
@@ -23,20 +23,22 @@
     </style>
 </head>
 <body>
+    <div> <a href="tel:+916305184802"><h1>సాల్లోజు నిర్మల </h1></a></div>
    <div> <a href="tel:+919640156170"><h1>జపాల కలంమా</h1></a></div>
-   <div> <a href="tel:+919182354736"><h1>గడియ సాయి కుమార్ </h1></a></div>
+   <div> <a href="tel:+919182354736"><h1>గడియ సాయి కుమార్-13,000 </h1></a></div>
    <div> <a href="tel:+919392387912"><h1>గడియ సాయి కుమార్-2</h1></a></div>
-   <div> <a href="tel:+918374401802"><h1>రెడాగోని సాయి కుమార్ </h1></a></div>
+   <div> <a href="tel:+918374401802"><h1>గడియ సాయి కుమార్-3 </h1></a></div>
    <div> <a href="tel:+919705533187"><h1>సురుగు జగన్ </h1></a></div>
    <div> <a href="tel:+919704477154"><h1>బట్లపల్లి సుధాకర్ </h1></a></div>
-   <div> <a href="tel:+916304247592"><h1>వాకిటి మంగమ్మ</h1></a></div>
+   <div style="background-color: red;"> <a href="#"><h1>మోర సత్తమ-3,250 </h1></a></div>
+   <div style="background-color: green;"> <a href="tel:+916304247592"><h1>వాకిటి మంగమ్మ-3,250</h1></a></div>
    <div> <a href="tel:+918074526417"><h1>వాకిటి మంగమ్మ-2</h1></a></div>
    <div> <a href="tel:+919849663218"><h1>వాకిటి రజిత </h1></a></div>
    <div> <a href="tel:+919949112507"><h1>గోగుల జంగయ్య</h1></a></div>
-   <div> <a href="tel:+91966928769"><h1>గుంతల హంసమా </h1></a></div>
-   <div> <a href="tel:+919381294696"><h1>వాడే శివ </h1></a></div>
-   <div> <a href="tel:+918309487481"><h1>PK మల్లపల్లి వెంకటేష్ </h1></a></div>
-   <div> <a href="tel:+916304731445"><h1>మోర భాస్కర్</h1></a></div>
+   <div style="background-color: green;"> <a href="tel:+91966928769"><h1>గుంతల హంసమా -3,250</h1></a></div>
+   <div style="background-color: green;"> <a href="tel:+919381294696"><h1>వాడే శివ-3,250 </h1></a></div>
+   <div> <a href="tel:+918309487481"><h1>PK.మల్లపల్లి వెంకటేష్-13,000 </h1></a></div>
+   <div> <a href="tel:+916304731445"><h1>మోర భాస్కర్-13,000</h1></a></div>
    <div> <a href="tel:+918008012381"><h1>Dr.ప్రసాద్</h1></a></div>
    <div> <a href="tel:+919652801418"><h1>రేడాగోని అంజమ్మ</h1></a></div>
    <div> <a href="tel:+919701311851"><h1>గోగుల చంద్రయ్య </h1></a></div>
