--- a/2lk.html
+++ b/2lk.html
@@ -23,35 +23,43 @@
     </style>
 </head>
 <body>
-    <div> <a href="tel:+916305184802"><h1>సాల్లోజు నిర్మల </h1></a></div>
-   <div> <a href="tel:+919640156170"><h1>జపాల కలంమా</h1></a></div>
-   <div> <a href="tel:+919182354736"><h1>గడియ సాయి కుమార్-13,000 </h1></a></div>
+    <div style="background-color: #DA27F5;width: 100%;height:100px;">
+        
+        <h1 style="background-color: #DA27F5;color: white;">
+<pre>
+2,00,000-->చిటి 
+ 10 / 8 / 2024
+</pre>
+    </h1>
+</div>
+    <div> <a href="tel:+916305184802"><h1>సాల్లోజు నిర్మల &#9989 </h1></a></div>
+   <div> <a href="tel:+919640156170"><h1>జపాల కలంమా &#9989 </h1></a></div>
+   <div> <a href="tel:+919182354736"><h1>గడియ సాయి కుమార్-13,000 &#9989 </h1></a></div>
    <div> <a href="tel:+919392387912"><h1>గడియ సాయి కుమార్-2</h1></a></div>
    <div> <a href="tel:+918374401802"><h1>గడియ సాయి కుమార్-3 </h1></a></div>
    <div> <a href="tel:+919705533187"><h1>సురుగు జగన్ </h1></a></div>
    <div> <a href="tel:+919704477154"><h1>బట్లపల్లి సుధాకర్ </h1></a></div>
    <div style="background-color: red;"> <a href="#"><h1>మోర సత్తమ-3,250 </h1></a></div>
-   <div style="background-color: green;"> <a href="tel:+916304247592"><h1>వాకిటి మంగమ్మ-3,250</h1></a></div>
+   <div style="background-color: green;"> <a href="tel:+916304247592"><h1>వాకిటి మంగమ్మ-3,250 &#9989</h1></a></div>
    <div> <a href="tel:+918074526417"><h1>వాకిటి మంగమ్మ-2</h1></a></div>
-   <div> <a href="tel:+919849663218"><h1>వాకిటి రజిత </h1></a></div>
-   <div> <a href="tel:+919949112507"><h1>గోగుల జంగయ్య</h1></a></div>
-   <div style="background-color: green;"> <a href="tel:+91966928769"><h1>గుంతల హంసమా -3,250</h1></a></div>
+   <div> <a href="tel:+919849663218"><h1>వాకిటి రజిత &#9989</h1></a></div>
+   <div> <a href="tel:+919949112507"><h1>గోగుల జంగయ్య &#9989</h1></a></div>
+   <div style="background-color: green;"> <a href="tel:+91966928769"><h1>గుంతల హంసమా -3,250 &#9989</h1></a></div>
    <div style="background-color: green;"> <a href="tel:+919381294696"><h1>వాడే శివ-3,250 </h1></a></div>
-   <div> <a href="tel:+918309487481"><h1>PK.మల్లపల్లి వెంకటేష్-13,000 </h1></a></div>
-   <div> <a href="tel:+916304731445"><h1>మోర భాస్కర్-13,000</h1></a></div>
-   <div> <a href="tel:+918008012381"><h1>Dr.ప్రసాద్</h1></a></div>
+   <div> <a href="tel:+918309487481"><h1>PK.మల్లపల్లి వెంకటేష్-13,000 &#9989 </h1></a></div>
+   <div> <a href="tel:+916304731445"><h1>మోర భాస్కర్-13,000 &#9989</h1></a></div>
+   <div> <a href="tel:+918008012381"><h1>Dr.ప్రసాద్ &#9989</h1></a></div>
    <div> <a href="tel:+919652801418"><h1>రేడాగోని అంజమ్మ</h1></a></div>
-   <div> <a href="tel:+919701311851"><h1>గోగుల చంద్రయ్య </h1></a></div>
+   <div> <a href="tel:+919701311851"><h1>గోగుల చంద్రయ్య &#9989</h1></a></div>
    <div> <a href="tel:+919059679828"><h1>బాడిగ శ్రీను </h1></a></div>
    <div> <a href="tel:+917330951390"><h1>బాడిగ శ్రీను-2</h1></a></div>
-   <div> <a href="tel:+919912590853"><h1>ఆలంపల్లి శ్రవణ్ </h1></a></div>
-   <div> <a href="tel:+917036195563"><h1>ఆలంపల్లి శ్రవణ్-2</h1></a></div>
+   <div> <a href="tel:+919603835807"><h1>ఆలంపల్లి శ్రవణ్ </h1></a></div>
    <div> <a href="tel:+919014047968"><h1>వాడే అర్జున్ </h1></a></div>
-   <div> <a href="tel:+916304789689"><h1>అల్వాల మస్తాన్ </h1></a></div>
-   <div> <a href="tel:+919603055528"><h1>అల్వాల మస్తాన్-2</h1></a></div>
-   <div> <a href="tel:+919848821397"><h1>జంపాల రాములు </h1></a></div>
-   <div> <a href="tel:+919542542697"><h1>జంపాల రాములు-2</h1></a></div>
-   <div> <a href="tel:+919391602600"><h1>Pk.మల్లపల్లి సంధ్య</h1></a></div>
+   <div> <a href="tel:+916304789689"><h1>అల్వాల మస్తాన్ &#9989</h1></a></div>
+   <div> <a href="tel:+919603055528"><h1>అల్వాల మస్తాన్-2 </h1></a></div>
+   <div> <a href="tel:+919848821397"><h1>జంపాల రాములు &#9989 </h1></a></div>
+   <div> <a href="tel:+919542542697"><h1>జంపాల రాములు-2 </h1></a></div>
+   <div> <a href="tel:+919391602600"><h1>Pk.మల్లపల్లి సంధ్య &#9989</h1></a></div>
    <div> <a href="tel:+91"><h1></h1></a></div>
    <div> <a href="tel:+91"><h1></h1></a></div>
     
