--- a/2lk3.html
+++ b/2lk3.html
@@ -37,6 +37,7 @@
    <div> <a href="tel:+919640404880"><h1>పందుల  కృష్ణ pk &#9989  </h1></a></div>
    <div> <a href="tel:+919177582630"><h1>ఈడాగోటి పద్మ -13,000</h1></a></div>
    <div> <a href="tel:+918919742042"><h1>వాడె విజయ్ </h1></a></div>
+   <div> <a href="tel:+918341742042"><h1>వాడె విజయ్-2 </h1></a></div>
    <div> <a href="tel:+918985240467"><h1>వాడె యాదయ్య  &#9989</h1></a></div>
    <div> <a href="tel:+919391665392"><h1>కోలుకులపల్లి  రాజు  </h1></a></div>
    <div> <a href="tel:+917989107612"><h1>పోలె వెంకటయ్య </h1></a></div>
@@ -47,7 +48,7 @@
    <div> <a href="tel:+919346194632"><h1>కోరపక శివ</h1></a></div>
    <div> <a href="tel:+916304247592"><h1>వాకిటి శ్రీను </h1></a></div>
    <div> <a href="tel:+916300541873"><h1>కోరపక అబయ్య-13,000 &#9989 &#9989</h1></a></div>
-<div> <a href="tel:+91"><h1>మోర శంకర్ -13,000 &#9989</h1></a></div>
+   <div> <a href="tel:+918106806469"><h1>మోర శంకర్ -13,000 &#9989</h1></a></div>
    <div style="background-color: red;"> <a href="#"><h1>చంద్రమౌళి-3,250</h1></a></div>
    <div style="background-color: green;"> <a href="tel:+919666353143"><h1>Pk.అబయ్య-3,250 </h1></a></div>
    <div> <a href="tel:+919705533187"><h1>M.మల్లపల్లి జగన్</h1></a></div>
