--- a/2lk2.html
+++ b/2lk2.html
@@ -39,7 +39,7 @@
    <div> <a href="tel:+919346145377"><h1>పడాల రవి (కోలుకుల్లాపల్లి  )</h1></a></div>
    <div> <a href="tel:+919542697519"><h1>వాకిటి రాములమ్మ (కిష్టారంపల్లి )</h1></a></div>
    <div> <a href="tel:+917989065591"><h1>మోర మలేష్ (కిష్టారంపల్లి)</h1></a></div>
-   <div> <a href="tel:+919000100287"><h1>చామంతి (వనమటిపల్లి )</h1></a></div>
+   <div> <a href="tel:+919000100287"><h1>చామంత (వనమటిపల్లి )</h1></a></div>
    <div> <a href="tel:+919154107712"><h1>మధ్యల యాదమ్మ (M. మల్లపల్లి )</h1></a></div>
    <div> <a href="tel:+919848613186"><h1>మాల్ సంధ్య-13,000 </h1></a></div>
    <div> <a href="tel:+918247405760"><h1>మోర రమేష్ (కిష్టారంపల్లి )</h1></a></div>
