--- a/2lk.html
+++ b/2lk.html
@@ -60,6 +60,8 @@
    <div> <a href="tel:+919848821397"><h1>జంపాల రాములు &#9989 </h1></a></div>
    <div> <a href="tel:+919542542697"><h1>జంపాల రాములు-2 </h1></a></div>
    <div> <a href="tel:+919391602600"><h1>Pk.మల్లపల్లి సంధ్య &#9989</h1></a></div>
+   <div> <a href="tel:+919959722731"><h1>Pk.మల్లపల్లి సంధ్య (భర్త)</h1></a></div>
+   
    <div> <a href="tel:+91"><h1></h1></a></div>
    <div> <a href="tel:+91"><h1></h1></a></div>
     
