--- a/2lk3.html
+++ b/2lk3.html
@@ -40,7 +40,7 @@
    <div> <a href="tel:+918341742042"><h1>వాడె విజయ్-2 </h1></a></div>
    <div> <a href="tel:+918985240467"><h1>వాడె యాదయ్య  &#9989</h1></a></div>
    <div> <a href="tel:+919391665392"><h1>కోలుకులపల్లి  రాజు  </h1></a></div>
-   <div> <a href="tel:+917989107612"><h1>పోలె వెంకటయ్య </h1></a></div>
+   <div> <a href="tel:+917989107612"><h1>పోలె వెంకటమ్మ </h1></a></div>
    <div> <a href="tel:+916300043867"><h1>Pk.శ్రవణ్ (మంగళ్ షాప్ )</h1></a></div>
    <div> <a href="tel:+919603835807"><h1>ఆలంపల్లి శ్రవణ్ &#9989 </h1></a></div>
    <div> <a href="tel:+919177150240"><h1>ముచర్ల సురేష్ &#9989</h1></a></div>
@@ -51,6 +51,7 @@
    <div> <a href="tel:+918106806469"><h1>మోర శంకర్ -13,000 &#9989</h1></a></div>
    <div style="background-color: red;"> <a href="#"><h1>చంద్రమౌళి-3,250</h1></a></div>
    <div style="background-color: green;"> <a href="tel:+919666353143"><h1>Pk.అబయ్య-3,250 </h1></a></div>
+   <div> <a href="tel:+918008012381"><h1>Dr.ప్రసాద్ </h1></a></div>
    <div> <a href="tel:+919705533187"><h1>M.మల్లపల్లి జగన్</h1></a></div>
    <div> <a href="tel:+916281710397"><h1>ఈడగోటి శివ (తండ్రీ నర్శిమా)</h1></a></div>
    <div> <a href="tel:+919949112507"><h1>గోగుల జంగయ్య &#9989</h1></a></div>
